feat: no more having to re-add DomTestingLibrary after page load! :party:

--- a/test-app/index.html
+++ b/test-app/index.html
@@ -61,6 +61,10 @@
     <button onclick="this.innerText = 'Jackie Kicked'">Jackie Chan 1</button>
     <button onclick="this.innerText = 'Jackie Kicked'">Jackie Chan 2</button>
   </section>
+  <section>
+    <h2>navigate</h2>
+    <a href="page2.html">Go to Page 2</a>
+  </section>
   <!-- Prettier unindents the script tag below -->
   <script>
     document
