--- a/test-app/index.html
+++ b/test-app/index.html
@@ -57,6 +57,11 @@
       onclick="this.style.border = '5px solid red'" />
   </section>
   <section>
+    <h2>configure standalone</h2>
+
+    <img data-other-test-id="other-id" src="data:image/png;base64," onclick="this.style.border = '5px solid red'" />
+  </section>
+  <section>
     <h2>getAllByText</h2>
     <button onclick="this.innerText = 'Jackie Kicked'">Jackie Chan 1</button>
     <button onclick="this.innerText = 'Jackie Kicked'">Jackie Chan 2</button>
