--- a/test-app/index.html
+++ b/test-app/index.html
@@ -32,7 +32,7 @@
   <section>
     <h2>getByText</h2>
     <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
-    <div id="nested">
+    <div id="nested" data-testid="nested">
       <h3>getByText within</h3>
       <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
     </div>
