within for. 'All' queries

--- a/test-app/index.html
+++ b/test-app/index.html
@@ -36,6 +36,10 @@
       <h3>getByText within</h3>
       <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
     </div>
+    <div id="nested2" data-testid="nested2">
+      <h3>getByText within</h3>
+      <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
+    </div>
   </section>
   <section>
     <h2>getByLabelText</h2>
