feat: 'within' using another query (#34)
* feat: within using another querty

* within for. 'All' queries

* supports regex in within queries

* functions in within queries

--- a/test-app/index.html
+++ b/test-app/index.html
@@ -32,7 +32,11 @@
   <section>
     <h2>getByText</h2>
     <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
-    <div id="nested">
+    <div id="nested" data-testid="nested">
+      <h3>getByText within</h3>
+      <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
+    </div>
+    <div id="nested2" data-testid="nested2">
       <h3>getByText within</h3>
       <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
     </div>
