working w/out serialization

--- a/test-app/index.html
+++ b/test-app/index.html
@@ -39,6 +39,8 @@
     <div id="nested2" data-testid="nested2">
       <h3>getByText within</h3>
       <button onclick="this.innerText = 'Button Clicked'">Button Text</button>
+      <span>text only in 2nd nested</span>
+      <span>another thing only in 2nd nested</span>
     </div>
   </section>
   <section>
