fix(within): alias findBy queries for within (#261)

--- a/test-app/index.html
+++ b/test-app/index.html
@@ -100,7 +100,17 @@
       <h2>navigate</h2>
       <a href="page2.html">Go to Page 2</a>
     </section>
-
+    <section>
+      <div className="App">
+        <div role="group" aria-labelledby="group-title" id="group-1">
+          <div id="group-title">My Group</div>
+          <button onclick="count.innerText = Number(count.innerText)+1">
+            Increase B
+          </button>
+          <div id="count">0</div>
+        </div>
+      </div>
+    </section>
     <!-- Prettier
       unindents the script tag below -->
     <script>
